# strojarina

./: .dockerignore  API_CONFIGURATION.md  DOCKER_FIX.md  DivisionPlatePlain.py  Dockerfile  LICENSE  Makefile  README-Docker.md  README.md  __init__.py  deleni.py  differentialThread.py  docker-compose.yml  findThread.py  knurling.py  materialOhyb.py  plochyNaHrideli.py  pulleys.py  pyproject.toml  pytest.ini  requirements.txt  run-container.sh  sineBar.py  strojarinaRuzna.py  tappingDrills.py  update-deps.sh
src/: DivisionPlatePlain.py  __init__.py  apiExample.py  deleni.py  differentialThread.py  findThread.py  gui_deleni_web.py  materialOhyb.py  plochyNaHrideli.py  pulleys.py  sineBar.py  strojarinaRuzna.py  tappingDrills.py  triangles.py
src/templates/: deleni.html  deleni_en.html  differential.html  differential_en.html  division_plate.html  division_plate_en.html  find_thread.html  find_thread_en.html  index.html  index_en.html  knurling.html  knurling_en.html  material_bending.html  material_bending_en.html  pulleys.html  pulleys_en.html  redeni.html  redeni_en.html  shaft_surfaces.html  shaft_surfaces_en.html  sine_bar.html  sine_bar_en.html  tapping_drills.html  tapping_drills_en.html  triangles.html  triangles_en.html
tests/: __init__.py  testDeleni.py  testDifferentialThread.py  testDivisionPlatePlain.py  testFindThread.py  testKnurling.py  testMaterialOhyb.py  testPlochyNaHrideli.py  testPulleys.py  testSineBar.py  testStrojarinaRuzna.py  testTappingDrills.py  testTriangles.py
