[tool.poetry]
name = "strojarina"
version = "0.1.0"
description = "Tools for machining calculations - dividing heads, differential threads, sine bars, knurling, pulleys and more"
authors = ["David Potucek <davidpotucek@protonmail.ch>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"


[tool.poetry.scripts]
deleni = "deleni:main"
differential-thread = "differentialThread:main"
division-plate = "DivisionPlatePlain:main"
find-thread = "findThread:main"
knurling = "knurling:main"
material-ohyb = "materialOhyb:main"
plochy-hridel = "plochyNaHrideli:main"
pulleys = "pulleys:main"
sine-bar = "sineBar:main"
strojarina-ruzna = "strojarinaRuzna:main"
tapping-drills = "tappingDrills:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

